Better
And fix the phase